@@ -1,0 +1,22 @@
+########### GENERAL SECTION ################################
+BATCH_NAME= delete
+CLIENTS_NUM_MAX=1
+INTERFACE   = eth0    
+NETMASK=20  
+#IP_ADDR_MIN= 192.168.1.1
+#IP_ADDR_MAX= 192.168.5.255  #Actually - this is for self-control
+CYCLES_NUM= 1
+URLS_NUM = 1
+
+########### URL SECTION ####################################
+#YOUR URL
+URL= http://bb-testing-ibase20.vm.baidu.com:8080/test/test
+#URL=http://localhost/ACE-INSTALL.html
+URL_SHORT_NAME="DELETE-file"
+#METHOD IS DELETE
+REQUEST_TYPE=DELETE
+LOG_RESP_BODIES=1
+LOG_RESP_HEADERS=1
+TIMER_URL_COMPLETION = 5000      # In msec. When positive, Now it is enforced by cancelling url fetch on timeout
+TIMER_AFTER_URL_SLEEP =0
+
