@@ -50,7 +50,7 @@ IP-address;
 - Rampup of the virtual clients number at loading start in either automatic or 
 manual mode; 
 - IPv4 and IPv6 addresses and URIs; 
-- HTTP 1.1. GET, POST and PUT, including file upload operations; 
+- HTTP 1.1. GET, POST, PUT (including file upload), DELETE, HEAD; 
 - HTTP user authentication login with POST or GET+POST methods. Unique 
 configurable username and password for each virtual client as well as 
 configurable posted string (post-forms) are the options. Another option is 
